# ai-assignment

./: README.md  main.py  pyproject.toml
