[project]
name = "classifier-assignment"
version = "0.1.0"
description = "Classifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "dotenv>=0.9.9",
   "fastapi>=0.115.12",
   "openai>=1.79.0",
   "pymupdf>=1.25.5",
   "python-multipart>=0.0.20",
   "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
